fixes dockerfiles, modified compose.yml and README.md